P0629/LPGenerator.java
/* LPGenerator.java */
/* Generated By:JavaCC: Do not edit this line. LPGenerator.java */
import java.util.*;
import java.io.*;

public class LPGenerator implements LPGeneratorConstants {
    public static Obj getProgram(String filename)throws ParseException{
        Reader reader=null;
        Obj p=null;
        try{
            reader=new FileReader(filename);
            p=new LPGenerator(reader).programf();
        }catch(FileNotFoundException e){
            System.out.println(filename+" is not found");
        }
        return p;
    }
    public static Obj getProgramFromString(String s)throws ParseException{
        Reader reader=new StringReader(s);
        Obj p=null;
        reader=new StringReader(s);
        p=new LPGenerator(reader).programf();
        return p;
    }

  final public Obj programf() throws ParseException {Obj obj;
    List<Obj> list=new ArrayList<Obj>();
    Token t,t2;
    List<String> libs=new ArrayList<String>();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IMPORT:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      jj_consume_token(IMPORT);
      t2 = jj_consume_token(IDENTIFIER);
libs.add(t2.image);
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LIBRARY:{
      t = jj_consume_token(LIBRARY);
      break;
      }
    case MINIMIZE:{
      t = jj_consume_token(MINIMIZE);
      break;
      }
    case MAXIMIZE:{
      t = jj_consume_token(MAXIMIZE);
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case WHILE:
      case FORALL:
      case EXISTS:
      case FOR:
      case FUN:
      case VARIABLE:
      case DEF:
      case SUBJECT:
      case VAR:
      case INTEGER:
      case DOUBLE:
      case IDENTIFIER:
      case 23:
      case 24:
      case 27:
      case 45:
      case 46:
      case 51:
      case 52:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      obj = stmtf();
list.add(obj);
    }
    jj_consume_token(0);
{if ("" != null) return new Program(libs,t.image,list);}
    throw new Error("Missing return statement in function");
  }

  final public Obj stmtf() throws ParseException {Obj cond,init,step,stmt,stmt2=null,params,expr,expr2,expr3;
    List<Obj> stmts;
    Token t,t2;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 23:{
      jj_consume_token(23);
{if ("" != null) return new IntObj(1);}
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      if (jj_2_1(2147483647)) {
        jj_consume_token(IF);
        jj_consume_token(24);
        cond = exprf();
        jj_consume_token(25);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 26:{
          jj_consume_token(26);
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          ;
        }
        stmt = stmtf();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ELSE:{
          jj_consume_token(ELSE);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 26:{
            jj_consume_token(26);
            break;
            }
          default:
            jj_la1[4] = jj_gen;
            ;
          }
          stmt2 = stmtf();
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          ;
        }
if(stmt2==null){if ("" != null) return new IfStmt(cond,stmt);}
        {if ("" != null) return new IfStmt(cond,stmt,stmt2);}
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IF:{
          jj_consume_token(IF);
          cond = exprf();
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 26:{
            jj_consume_token(26);
            stmt = stmtf();
            break;
            }
          case 27:{
            stmt = blockstmtf();
            break;
            }
          default:
            jj_la1[6] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case ELSE:{
            jj_consume_token(ELSE);
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case 26:{
              jj_consume_token(26);
              break;
              }
            default:
              jj_la1[7] = jj_gen;
              ;
            }
            stmt2 = stmtf();
            break;
            }
          default:
            jj_la1[8] = jj_gen;
            ;
          }
if(stmt2==null){if ("" != null) return new IfStmt(cond,stmt);}
        {if ("" != null) return new IfStmt(cond,stmt,stmt2);}
          break;
          }
        case WHILE:{
          jj_consume_token(WHILE);
          jj_consume_token(24);
          cond = exprf();
          jj_consume_token(25);
          stmt = stmtf();
{if ("" != null) return new WhileStmt(cond,stmt);}
          break;
          }
        case FOR:{
          jj_consume_token(FOR);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 24:{
            jj_consume_token(24);
            init = exprf();
            jj_consume_token(23);
            cond = exprf();
            jj_consume_token(23);
            step = exprf();
            jj_consume_token(25);
            stmt = stmtf();
{if ("" != null) return new ForStmt(init,cond,step,stmt);}
            break;
            }
          case IDENTIFIER:{
            t = jj_consume_token(IDENTIFIER);
            jj_consume_token(IN);
            expr = exprf();
            stmt = nestedforeachstmtf();
{if ("" != null) return new ForEachStmt(new Identifier(t.image),expr,stmt);}
            break;
            }
          default:
            jj_la1[9] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
          }
        case DEF:{
          jj_consume_token(DEF);
          t = jj_consume_token(IDENTIFIER);
          jj_consume_token(24);
          params = paramsf();
          jj_consume_token(25);
          stmt = stmtf();
{if ("" != null) return new FuncDefStmt(t.image,params,stmt);}
          break;
          }
        case SUBJECT:{
          jj_consume_token(SUBJECT);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 27:{
            jj_consume_token(27);
            expr = subjsf();
            jj_consume_token(28);
            break;
            }
          case FORALL:
          case EXISTS:
          case FUN:
          case VAR:
          case INTEGER:
          case DOUBLE:
          case IDENTIFIER:
          case 23:
          case 24:
          case 29:
          case 45:
          case 46:
          case 51:
          case 52:{
            expr = argsf();
            jj_consume_token(23);
            break;
            }
          default:
            jj_la1[10] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
{if ("" != null) return new FuncCall(new Identifier("subject"),expr);}
          break;
          }
        default:
          jj_la1[13] = jj_gen;
          if (jj_2_2(2147483647)) {
            stmt = blockstmtf();
{if ("" != null) return stmt;}
          } else if (jj_2_3(2147483647)) {
            t = jj_consume_token(VARIABLE);
            jj_consume_token(27);
stmts=new ArrayList<Obj>();
            label_3:
            while (true) {
              switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
              case IDENTIFIER:{
                ;
                break;
                }
              default:
                jj_la1[11] = jj_gen;
                break label_3;
              }
              t2 = jj_consume_token(IDENTIFIER);
              jj_consume_token(23);
stmts.add(new LPDefStmt(t.image,t2.image));
            }
            jj_consume_token(28);
{if ("" != null) return new BlockStmt(stmts);}
          } else {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case VARIABLE:{
              t = jj_consume_token(VARIABLE);
              t2 = jj_consume_token(IDENTIFIER);
              jj_consume_token(23);
{if ("" != null) return new LPDefStmt(t.image,t2.image);}
              break;
              }
            case FORALL:
            case EXISTS:
            case FUN:
            case VAR:
            case INTEGER:
            case DOUBLE:
            case IDENTIFIER:
            case 24:
            case 45:
            case 46:
            case 51:
            case 52:{
              stmt = exprf();
              jj_consume_token(23);
{if ("" != null) return stmt;}
              break;
              }
            default:
              jj_la1[14] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public Obj subjsf() throws ParseException {List<Obj> subjs=new ArrayList<Obj>();
    Obj expr;
    label_4:
    while (true) {
      expr = exprf();
subjs.add(expr);
      jj_consume_token(23);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FORALL:
      case EXISTS:
      case FUN:
      case VAR:
      case INTEGER:
      case DOUBLE:
      case IDENTIFIER:
      case 24:
      case 45:
      case 46:
      case 51:
      case 52:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_4;
      }
    }
{if ("" != null) return new Args(subjs);}
    throw new Error("Missing return statement in function");
  }

  final public Obj blockstmtf() throws ParseException {List<Obj> stmts;
    Obj stmt;
    jj_consume_token(27);
stmts=new ArrayList<Obj>();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case WHILE:
      case FORALL:
      case EXISTS:
      case FOR:
      case FUN:
      case VARIABLE:
      case DEF:
      case SUBJECT:
      case VAR:
      case INTEGER:
      case DOUBLE:
      case IDENTIFIER:
      case 23:
      case 24:
      case 27:
      case 45:
      case 46:
      case 51:
      case 52:{
        ;
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        break label_5;
      }
      stmt = stmtf();
stmts.add(stmt);
    }
    jj_consume_token(28);
{if ("" != null) return new BlockStmt(stmts);}
    throw new Error("Missing return statement in function");
  }

  final public Obj nestedforeachstmtf() throws ParseException {Obj list,stmt;
    Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 29:{
      jj_consume_token(29);
      t = jj_consume_token(IDENTIFIER);
      jj_consume_token(IN);
      list = exprf();
      stmt = nestedforeachstmtf();
{if ("" != null) return new ForEachStmt(new Identifier(t.image),list,stmt);}
      break;
      }
    case 26:{
      jj_consume_token(26);
      stmt = stmtf();
{if ("" != null) return stmt;}
      break;
      }
    case 27:{
      stmt = blockstmtf();
{if ("" != null) return stmt;}
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Obj paramsf() throws ParseException {List<Obj> params=new ArrayList<Obj>();
    Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENTIFIER:{
      t = jj_consume_token(IDENTIFIER);
params.add(new Identifier(t.image));
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      ;
    }
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 29:{
        ;
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        break label_6;
      }
      jj_consume_token(29);
      t = jj_consume_token(IDENTIFIER);
params.add(new Identifier(t.image));
    }
{if ("" != null) return new Params(params);}
    throw new Error("Missing return statement in function");
  }

  final public Obj exprf() throws ParseException {Obj expr;
    expr = expr9f();
{if ("" != null) return expr;}
    throw new Error("Missing return statement in function");
  }

  final public Obj expr9f() throws ParseException {Token index;
    Obj list,expr,option=null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FORALL:{
      jj_consume_token(FORALL);
      index = jj_consume_token(IDENTIFIER);
      jj_consume_token(IN);
      list = exprf();
      expr = nestedforallf();
{if ("" != null) return new ForAll(new Identifier(index.image),list,expr);}
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      if (jj_2_4(2)) {
        jj_consume_token(EXISTS);
        jj_consume_token(24);
        option = exprf();
        jj_consume_token(25);
        index = jj_consume_token(IDENTIFIER);
        jj_consume_token(IN);
        list = exprf();
        expr = nestedexists2f();
{if ("" != null) return new Exists(new Identifier(index.image),list,expr,option);}
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case EXISTS:{
          jj_consume_token(EXISTS);
          index = jj_consume_token(IDENTIFIER);
          jj_consume_token(IN);
          list = exprf();
          expr = nestedexistsf();
{if ("" != null) return new Exists(new Identifier(index.image),list,expr);}
          break;
          }
        case FUN:
        case VAR:
        case INTEGER:
        case DOUBLE:
        case IDENTIFIER:
        case 24:
        case 45:
        case 46:
        case 51:
        case 52:{
          expr = expr8f();
{if ("" != null) return expr;}
          break;
          }
        default:
          jj_la1[21] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public Obj expr8f() throws ParseException {Obj left,right;
    left = expr7_5f();
    if (jj_2_5(2)) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 30:{
        jj_consume_token(30);
        right = exprf();
left=new BinOp("=",left,right);
        break;
        }
      case 31:{
        jj_consume_token(31);
        right = exprf();
left=new BinOp("=",left,new BinOp("+",left,right));
        break;
        }
      case 32:{
        jj_consume_token(32);
        right = exprf();
left=new BinOp("=",left,new BinOp("-",left,right));
        break;
        }
      case 33:{
        jj_consume_token(33);
        right = exprf();
left=new BinOp("=",left,new BinOp("*",left,right));
        break;
        }
      case 34:{
        jj_consume_token(34);
        right = exprf();
left=new BinOp("=",left,new BinOp("/",left,right));
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
  }

  final public Obj expr7_5f() throws ParseException {Obj expr,then=null,elze;
    expr = expr7f();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 35:{
      jj_consume_token(35);
      then = exprf();
      jj_consume_token(26);
      elze = expr7_5f();
expr=new Cond(expr,then,elze);
      break;
      }
    default:
      jj_la1[23] = jj_gen;
      ;
    }
{if ("" != null) return expr;}
    throw new Error("Missing return statement in function");
  }

  final public Obj expr7f() throws ParseException {Obj left,right;
    left = expr6f();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 36:{
      jj_consume_token(36);
      right = exprf();
left=new BinOp("->",left,right);
      break;
      }
    default:
      jj_la1[24] = jj_gen;
      ;
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
  }

  final public Obj expr6f() throws ParseException {Obj left,right;
    left = expr5f();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 37:{
        ;
        break;
        }
      default:
        jj_la1[25] = jj_gen;
        break label_7;
      }
      jj_consume_token(37);
      right = expr5f();
left=new BinOp("||",left,right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
  }

  final public Obj expr5f() throws ParseException {Obj left,right;
    left = expr4f();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 38:{
        ;
        break;
        }
      default:
        jj_la1[26] = jj_gen;
        break label_8;
      }
      jj_consume_token(38);
      right = expr4f();
left=new BinOp("&&",left,right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
  }

  final public Obj expr4f() throws ParseException {Obj left,right;
    Token op;
    left = expr3f();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 39:
    case 40:
    case 41:
    case 42:
    case 43:
    case 44:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 39:{
        op = jj_consume_token(39);
        break;
        }
      case 40:{
        op = jj_consume_token(40);
        break;
        }
      case 41:{
        op = jj_consume_token(41);
        break;
        }
      case 42:{
        op = jj_consume_token(42);
        break;
        }
      case 43:{
        op = jj_consume_token(43);
        break;
        }
      case 44:{
        op = jj_consume_token(44);
        break;
        }
      default:
        jj_la1[27] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = expr3f();
left=new BinOp(op.image,left,right);
      break;
      }
    default:
      jj_la1[28] = jj_gen;
      ;
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
  }

  final public Obj expr3f() throws ParseException {Obj left,right;
    Token op;
    left = expr2f();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 45:
      case 46:{
        ;
        break;
        }
      default:
        jj_la1[29] = jj_gen;
        break label_9;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 45:{
        op = jj_consume_token(45);
        break;
        }
      case 46:{
        op = jj_consume_token(46);
        break;
        }
      default:
        jj_la1[30] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = expr2f();
left=new BinOp(op.image,left,right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
  }

  final public Obj expr2f() throws ParseException {Obj left,right;
    Token op;
    left = unaryf();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 47:
      case 48:
      case 49:
      case 50:{
        ;
        break;
        }
      default:
        jj_la1[31] = jj_gen;
        break label_10;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 47:{
        op = jj_consume_token(47);
        break;
        }
      case 48:{
        op = jj_consume_token(48);
        break;
        }
      case 49:{
        op = jj_consume_token(49);
        break;
        }
      case 50:{
        op = jj_consume_token(50);
        break;
        }
      default:
        jj_la1[32] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = unaryf();
left=new BinOp(op.image,left,right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
  }

  final public Obj unaryf() throws ParseException {Obj expr,list;
    Token op,index;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 45:
    case 46:
    case 51:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 46:{
        op = jj_consume_token(46);
        break;
        }
      case 45:{
        op = jj_consume_token(45);
        break;
        }
      case 51:{
        op = jj_consume_token(51);
        break;
        }
      default:
        jj_la1[33] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      expr = unaryf();
{if ("" != null) return new Unary(op.image,expr);}
      break;
      }
    case FUN:
    case VAR:
    case INTEGER:
    case DOUBLE:
    case IDENTIFIER:
    case 24:
    case 52:{
      expr = postfixf();
{if ("" != null) return expr;}
      break;
      }
    default:
      jj_la1[34] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Obj nestedforallf() throws ParseException {Token index;
    Obj list,expr;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 29:{
      jj_consume_token(29);
      index = jj_consume_token(IDENTIFIER);
      jj_consume_token(IN);
      list = exprf();
      expr = nestedforallf();
{if ("" != null) return new ForAll(new Identifier(index.image),list,expr);}
      break;
      }
    case 26:{
      jj_consume_token(26);
      expr = exprf();
{if ("" != null) return expr;}
      break;
      }
    default:
      jj_la1[35] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Obj nestedexistsf() throws ParseException {Token index;
    Obj list,expr;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 29:{
      jj_consume_token(29);
      index = jj_consume_token(IDENTIFIER);
      jj_consume_token(IN);
      list = exprf();
      expr = nestedexistsf();
{if ("" != null) return new Exists(new Identifier(index.image),list,expr);}
      break;
      }
    case 26:{
      jj_consume_token(26);
      expr = exprf();
{if ("" != null) return expr;}
      break;
      }
    default:
      jj_la1[36] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }
